--- a/prob1_2025/index.html
+++ b/prob1_2025/index.html
@@ -182,6 +182,9 @@ This is the class webpage for Probability Theory I
 <li>
 <b>Email:</b>arnabc at isical dot ac in</li>
 
+<li>
+<b>Office hour (time slot for students to meet me in my office):</b> Friday 5pm to 6pm.</li>
+
 </ul>
 
 <table align="right" width="50%">
@@ -353,30 +356,6 @@ conditional distributions, conditional expectation.
 Distribution of  sum of  two independent random 
 variables. Functions of more than one discrete random 
 variables.
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/prob1_2024/index.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "index"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
 
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
