--- a/prob1_2025/index.html
+++ b/prob1_2025/index.html
@@ -180,7 +180,10 @@ This is the class webpage for Probability Theory I
 <b>Teacher:</b> Arnab Chakraborty</li>
 
 <li>
-<b>Email:</b>arnabc at isical dot ac in</li>
+<b>Email:</b>arnabc74 at gmail</li>
+
+<li>
+<b>Office:</b> Applied Statistics Unit (ASU) Room 914 (S N Bose Bhavan 9th floor)</li>
 
 <li>
 <b>Office hour (time slot for students to meet me in my office):</b> Friday 5pm to 6pm.</li>
