--- a/prob1_2025/survival.html
+++ b/prob1_2025/survival.html
@@ -30,7 +30,7 @@ hideShow = function(lb) {
    if(me.style.display=="block"){
      me.style.display="none";
    }
-   else if (me.style.display=="none"){
+   else {
      me.style.display="block";
    }
 }
@@ -79,6 +79,10 @@ body,table {
   //color: #fff;
 }
 
+.ans {
+  display:none;
+  background: #ccffcc;
+}
 
 .sticky {
   position: fixed;
@@ -97,12 +101,18 @@ body,table {
 }
 
 .scrpt {
+  margin:10px;
   border-left: 5px solid black;
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -139,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<h3/>
 <ul>
 <li>
 <a href="#Survival guidelines">Survival guidelines</a>
@@ -171,7 +181,8 @@ function myFunction() {
 </ul>
 <hr/>
 
-<h1><a
+
+<h1 xmlns=""><a
 name="Survival guidelines">Survival guidelines</a></h1>
 
 <center>
@@ -181,17 +192,16 @@ Welcome to ISI. I am sure you are all very good students. But
 possibly you feel a bit apprehensive about whether your good
 days will continue at ISI. Indeed, this apprehension is
 justified, as ISI days are going to be rather different from what
-you have seen so far.  
+you have experienced so far. 
 <p></p>
 
 <h2><a
 name="What goes wrong?">What goes wrong?</a></h2>
-If you think carefully you'll notice that
-your good academic career so far has depended on these three factors:
+Your good academic career so far has depended on these three factors:
 <ol type="">
 
 <li>You lived in a supportive environment (your parents cared
-for you, maintained daily routines, kept disturbances away
+for you, maintained daily routines, kept disturbances away,
 etc).</li>
 
 <li>You knew the exam patterns well in advance (using textbooks,
@@ -225,14 +235,15 @@ to survive <i>in spite of these.</i>
 name="How to cope with study problems">How to cope with study problems</a></h2>
 In a nutshell, here is the survival strategy: <blockquote>
 
-<b>Don't expect to understand everything. But carefully keep
+<b>Do <i>not</i> expect to understand everything. But carefully keep
 track of what you are understanding and what you are not (and why).</b>
 
 </blockquote> 
 Here is how this may be achieved. Maintain one fair note for each
 subject. It could be the same as your class notes (if you have a
 good fast handwriting), but having a different fair note is more
-effective. In this fair notebook, you'll write down all the
+effective.  In this fair notebook,
+ you'll write down all the
 things that you have understood and, for each unclear point,
 identify where the problem lies:
 <ol type="">
@@ -375,7 +386,7 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
 </noscript><!-- end disqus code --> 
 <p></p>
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
