--- a/prob1_2025/survival.html
+++ b/prob1_2025/survival.html
@@ -314,7 +314,7 @@ hidden stairways (I leave you to find them!).
 
 <h2><a
 name="Three scenarios of disaster">Three scenarios of disaster</a></h2>
-Here are three scenarios that ruin students at ISI.
+Here are three scenarios that ruin students at ISI. This, by the way, is <i>not</i>  a complete list!
 <h3><a
 name="Scenario 1: The puzzle-loving kid">Scenario 1: The puzzle-loving kid</a></h3>
  You are very serious, study the lectures extremely carefully, and notice some intriguing point
